...
                                            <connections>
                                                <action selector="orderFrontStandardAboutPanel:" target="Ady-hI-5gd" id="Exp-CZ-Vem"/>
                                            </connections>
                                        </menuItem>
                                        <menuItem isSeparatorItem="YES" id="VOq-y0-SEH"/>
                                        <menuItem title="Preferences…" alternate="YES" keyEquivalent="," id="BOF-NM-1cW">
                                            <accessibility identifier="prefrencesMenu"/>
                                            <connections>
                                                <action selector="showPreferencesMenuItem" target="Ady-hI-5gd" id="tqG-fQ-j0h"/>
                                            </connections>
                                        </menuItem>
                                        <menuItem isSeparatorItem="YES" id="wFC-TO-SCJ"/>
                                        <menuItem title="Hide PDF Archiver" keyEquivalent="h" id="Olw-nP-bQN">
...
                        </items>
                    </menu>
                    <connections>
                        <outlet property="delegate" destination="Voe-Tx-rLC" id="PrD-fu-P6m"/>
                    </connections>
                </application>
                <customObject id="Voe-Tx-rLC" customClass="AppDelegate" customModule="PDFArchiver" customModuleProvider="target"/>
                <customObject id="YLy-65-1bz" customClass="NSFontManager"/>
                <customObject id="Ady-hI-5gd" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="836" y="-39"/>
        </scene>
        <!--Window Controller-->
...
                            <box autoresizesSubviews="NO" borderType="line" title="One-Time Donation" translatesAutoresizingMaskIntoConstraints="NO" id="alz-A4-A8z">
                                <rect key="frame" x="372" y="50" width="196" height="145"/>
                                <view key="contentView" id="yc2-iU-djq">
                                    <rect key="frame" x="3" y="3" width="190" height="124"/>
                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                    <subviews>
                                        <button identifier="level1" verticalHuggingPriority="751" translatesAutoresizingMaskIntoConstraints="NO" id="pjt-37-tlz">
                                            <rect key="frame" x="9" y="81" width="172" height="32"/>
                                            <constraints>
                                                <constraint firstAttribute="height" constant="21" id="bTt-g8-WKR"/>
                                            </constraints>
                                            <buttonCell key="cell" type="push" title="Level 1" bezelStyle="rounded" alignment="center" enabled="NO" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="dY2-A7-5th">
                                                <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                                <font key="font" metaFont="system"/>
                                            </buttonCell>
                                            <connections>
                                                <action selector="donationButton1Clicked:" target="rWp-Co-RrU" id="f1h-ft-aZ6"/>
                                            </connections>
                                        </button>
                                        <button identifier="level2" verticalHuggingPriority="751" translatesAutoresizingMaskIntoConstraints="NO" id="OLw-Bf-fGp">
                                            <rect key="frame" x="9" y="45" width="172" height="32"/>
                                            <buttonCell key="cell" type="push" title="Level 2" bezelStyle="rounded" alignment="center" enabled="NO" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="5JW-68-xh8">
                                                <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                                <font key="font" metaFont="system"/>
                                            </buttonCell>
                                            <connections>
                                                <action selector="donationButton2Clicked:" target="rWp-Co-RrU" id="SFb-Mb-6u8"/>
                                            </connections>
                                        </button>
                                        <button identifier="level3" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="Zkb-C5-cZI">
                                            <rect key="frame" x="9" y="8" width="172" height="33"/>
                                            <buttonCell key="cell" type="push" title="Level 3" bezelStyle="rounded" alignment="center" enabled="NO" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="ndf-3x-jdp">
                                                <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                                <font key="font" metaFont="system"/>
                                            </buttonCell>
                                            <connections>
...
